@@ -247,6 +247,13 @@ class C20ImportFormatter extends CImportFormatter {
 			foreach ($this->data['triggers'] as $trigger) {
 				CArrayHelper::convertFieldToArray($trigger, 'dependencies');
 
+				if ($trigger['dependencies']) {
+					foreach ($trigger['dependencies'] as &$dependency) {
+						$dependency['expression'] = $this->triggerExpressionConverter->convert($dependency['expression']);
+					}
+					unset($dependency);
+				}
+
 				$trigger['expression'] = $this->triggerExpressionConverter->convert($trigger['expression']);
 
 				$triggersData[] = $this->renameTriggerFields($trigger);
@@ -277,6 +284,12 @@ class C20ImportFormatter extends CImportFormatter {
 
 				foreach ($map['selements'] as &$selement) {
 					CArrayHelper::convertFieldToArray($selement, 'urls');
+
+					if ($selement['elementtype'] == SYSMAP_ELEMENT_TYPE_TRIGGER) {
+						$selement['element']['expression'] = $this->triggerExpressionConverter->convert(
+							$selement['element']['expression']
+						);
+					}
 				}
 				unset($selement);
 
@@ -284,6 +297,13 @@ class C20ImportFormatter extends CImportFormatter {
 
 				foreach ($map['links'] as &$link) {
 					CArrayHelper::convertFieldToArray($link, 'linktriggers');
+
+					foreach ($link['linktriggers'] as &$linktrigger) {
+						$linktrigger['trigger']['expression'] = $this->triggerExpressionConverter->convert(
+							$linktrigger['trigger']['expression']
+						);
+					}
+					unset($linktrigger);
 				}
 				unset($link);
 
